--- a/views/layouts/head.ejs
+++ b/views/layouts/head.ejs
@@ -8,12 +8,13 @@
     <meta name="generator" content="Jekyll v3.8.5">
     <title>Dashboard Template · Bootstrap</title>
     
-    <link rel="stylesheet" href="css/bootstrap.min.css"/>
+    <link rel="stylesheet" href="/css/bootstrap.min.css"/>
+	
     <link rel='stylesheet' href='/stylesheets/style.css' />
     <link rel='stylesheet' href='/stylesheets/dashboard.css' />
     
     <script language="javascript" src="/jquery.min.js"></script>
-    <script language="javascript" src="js/bootstrap.min.js"></script>
+    <script language="javascript" src="/js/bootstrap.min.js"></script>
     <script language="javascript" src="/feather.min.js"></script>
     <script language="javascript" src="/Chart.bundle.min.js"></script>
 
