--- a/views/layouts/head.ejs
+++ b/views/layouts/head.ejs
@@ -11,12 +11,14 @@
     <link rel="stylesheet" href="/css/bootstrap.min.css"/>
 	
     <link rel='stylesheet' href='/stylesheets/style.css' />
-    <link rel='stylesheet' href='/stylesheets/dashboard.css' />
+    
+    <link rel='stylesheet' href='/stylesheets/datatables.min.css' />
     
     <script language="javascript" src="/jquery.min.js"></script>
     <script language="javascript" src="/js/bootstrap.min.js"></script>
     <script language="javascript" src="/feather.min.js"></script>
     <script language="javascript" src="/Chart.bundle.min.js"></script>
+    <script language="javascript" src="/javascripts/datatables.min.js"></script>
 
         <style>
         .bd-placeholder-img {
@@ -34,4 +36,6 @@
             }
         }
         </style>
+        
+        <link rel='stylesheet' href='/stylesheets/dashboard.css' />
     </head>
