--- a/views/layouts/head.ejs
+++ b/views/layouts/head.ejs
@@ -19,6 +19,7 @@
     <script language="javascript" src="/feather.min.js"></script>
     <script language="javascript" src="/Chart.bundle.min.js"></script>
     <script language="javascript" src="/javascripts/datatables.min.js"></script>
+    <script language="javascript" src="/javascripts/dataTables.cellEdit.js"></script>
 
         <style>
         .bd-placeholder-img {
